Show the correct icon size in the zoom slider tooltip.

BUG: 305694
FIXED-IN: 4.12.3
REVIEW: 111197